--- a/src/Layouts/LayoutC.css
+++ b/src/Layouts/LayoutC.css
@@ -19,3 +19,8 @@
 [data-theme="dark"] .site-layout-content {
     background: #141414;
 }
+
+.site-layout-content {
+    width: 100%;
+    display: flex;
+}
